force-app/main/default/objects/WO_Cargo__c/WO_Cargo__c.object-meta.xml
<CustomObject>
    <label>WO+Cargo</label>
    <nameField>
        <displayFormat>WOC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WO+Cargoes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>