force-app/main/default/objects/WO_Cargo__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <referenceTo>Cargo__c</referenceTo>
    <relationshipLabel>WO+Cargoes</relationshipLabel>
    <relationshipName>WO_Cargoes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>