force-app/main/default/objects/WO_Cargo__c/fields/WO_Product__c.field-meta.xml
<CustomField>
    <fullName>WO_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WO+Product</label>
    <referenceTo>ConnectWOProduct__c</referenceTo>
    <relationshipLabel>WO+Cargoes</relationshipLabel>
    <relationshipName>WO_Cargoes</relationshipName>
    <type>Lookup</type>
</CustomField>