force-app/main/default/objects/WO_Cargo__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <label>Work order</label>
    <referenceTo>WorkOrder__c</referenceTo>
    <relationshipLabel>WO+Cargoes</relationshipLabel>
    <relationshipName>WO_Cargoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>